--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -28,15 +28,15 @@
 		</nav>
 	</header>
 
-	<div class="container">
+	<!-- <div class="container">
  		<div class="jumbotron text-center">
  			 <h1> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Fronend! Loving It! </h1>
  		</div>
- 	</div>
+ 	</div> -->
 	<div id="main">
  		<!-- <div ng-view> </div> -->
 		<div class="container">
-			<div class="spinner" ng-show="loading"> <img src="../assets/images/loding.gif" width="300" height="300" border="0" alt=""></div>
+			<div class="spinner" ng-show="loading"> <img src="../assets/images/loding.gif"  border="0" alt=""></div>
 			<div class="row">
 				<!-- <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="product in productList | filter:{in_stock:true}"> -->
 				
