--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Frontend Homepage </title>
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 	<style type="text/css">
 		
@@ -48,8 +48,8 @@
 		</div>
 
  	</div>
-<script src="../bower_components/angular/angular.min.js"> </script>
+ <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
- <script src="assets/scripts/sampleCartApp.js"> </script>
+ <script src="assets/scripts/app.js"> </script>
 </body>
 </html>
