--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -12,30 +12,35 @@
 </head>
 <body ng-controller="sampleCartAppCtrl">
 	<!-- HEADER AND NAVBAR -->
-	<header>
-		<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+			  </button>
 				<a class="navbar-brand" href="#/"><i class="fa fa-shield"></i> MEAN is awesome!</a>
 			</div>
 			
-			<ul class="nav navbar-nav navbar-right">
-				<!-- <li ng-repeat="category in categories"><a href="#/{{category.url}}" ng-click="loadCategoryProducts( category )"> {{category.name}} </a></li> -->
-				<li> <a href="#/" ng-click="currentCategory={}"><i class="fa fa-home"></i>Home</a> </li>
-				<li ng-repeat="category in categories"><a href="" ng-click="loadCategoryProducts( category )"> {{category.name}} </a></li>
-			</ul>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<!-- <li ng-repeat="category in categories"><a href="#/{{category.url}}" ng-click="loadCategoryProducts( category )"> {{category.name}} </a></li> -->
+					<li> <a href="#/" ng-click="currentCategory={}"><i class="fa fa-home"></i>Home</a> </li>
+					<li ng-repeat="category in categories"><a href="" ng-click="loadCategoryProducts( category )"> {{category.name}} </a></li>
+				</ul>
+			</div>
 		</div>
-		</nav>
-	</header>
+	</nav>
 
-	<!-- <div class="container">
+	 <div class="container">
  		<div class="jumbotron text-center">
  			 <h1> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Fronend! Loving It! </h1>
  		</div>
- 	</div> -->
-	<div id="main">
- 		<!-- <div ng-view> </div> -->
-		<div class="container">
+ 	</div> 
+	<div class="container" >
+		<div id="main" >
 			<div class="spinner" ng-show="loading"> <img src="../assets/images/loding.gif"  border="0" alt=""></div>
 			<div class="row">
 				<!-- <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="product in productList | filter:{in_stock:true}"> -->
@@ -43,11 +48,10 @@
 				<div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="product in productList | filterProductsByCategory:currentCategory" >
 					<product-thumbnail></product-thumbnail>
 				</div>
-				
 			</div>
+			<!-- <div ng-view> </div> -->
 		</div>
-
- 	</div>
+	</div>
  <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
  <script src="assets/scripts/app.js"> </script>
