--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -41,9 +41,9 @@
  <script src="../bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
  <script src="assets/scripts/js/dirPagination.js"> </script>
  <script src="assets/scripts/app.js"> </script>
- <!-- <script src="assets/scripts/directives/bs-dropdown.js"> </script> -->
  <script src="assets/scripts/directives/product.js"> </script>
  <script src="assets/scripts/directives/category.js"> </script>
+ <script src="assets/scripts/directives/loading.js"> </script>
  <script src="assets/scripts/services/common.js"> </script>
  <script src="assets/scripts/services/products.js"> </script>
  <script src="assets/scripts/services/categories.js"> </script>
