--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -38,6 +38,7 @@
  <script src="assets/scripts/app.js"> </script>
  <script src="assets/scripts/directives/productGridView.js"> </script>
  <script src="assets/scripts/directives/productListView.js"> </script>
+ <script src="assets/scripts/directives/loading.js"> </script>
  <script src="assets/scripts/services/products.js"> </script>
  <script src="assets/scripts/services/categories.js"> </script>
  <script src="assets/scripts/filters/filters.js"> </script>
