--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -25,7 +25,8 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="#/"><i class="fa fa-home"></i>Home</a> </li>
-					<li ng-repeat="category in categories"><a href="#/products/{{category.url}}/{{ category._id }}" ng-click="setCurrentCategory( category )"> {{category.name}} </a></li> 
+					<li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" > {{category.name}} </a></li>
+					<!-- <li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" ng-click="setActiveCategory( category )"> {{category.name}} </a></li> --> 
 				</ul>
 			</div>
 		</div>
@@ -43,8 +44,8 @@
  <script src="assets/scripts/services/categories.js"> </script>
  <script src="assets/scripts/filters/filters.js"> </script>
  <script src="assets/scripts/controllers/defaultCtrl.js"> </script>
- <script src="assets/scripts/controllers/defaultCtrl.js"> </script>
- <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
  <script src="assets/scripts/controllers/hompageCtrl.js"> </script>
+ <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
+ <!-- <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script> -->
 </body>
 </html>
