--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -46,6 +46,6 @@
  <script src="assets/scripts/controllers/defaultCtrl.js"> </script>
  <script src="assets/scripts/controllers/hompageCtrl.js"> </script>
  <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
- <!-- <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script> -->
+ <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
 </body>
 </html>
