--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -5,6 +5,8 @@
 	<title> Frontend Homepage </title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick.css">
+	<link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 	
 </head>
@@ -36,6 +38,8 @@
 		</div>
  <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
+ <script src="../bower_components/jquery/dist/jquery.min.js"> </script>
+ <script src="../bower_components/slick-carousel/slick/slick.min.js"> </script>
  <script src="assets/scripts/app.js"> </script>
  <script src="assets/scripts/directives/productGridView.js"> </script>
  <script src="assets/scripts/directives/productListView.js"> </script>
@@ -47,5 +51,6 @@
  <script src="assets/scripts/controllers/hompageCtrl.js"> </script>
  <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
  <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
+
 </body>
 </html>
