--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -27,6 +27,7 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="#/"><i class="fa fa-home"></i>Home</a> </li>
+					<li> <a href="#/login"><i class="fa fa-user"></i> Sign In </a> </li>
 					<li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" > {{category.name}} </a></li>
 					<!-- <li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" ng-click="setActiveCategory( category )"> {{category.name}} </a></li> --> 
 				</ul>
@@ -53,6 +54,33 @@
  <script src="assets/scripts/controllers/hompageCtrl.js"> </script>
  <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
  <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
+
+ <!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '241587526185299',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+ -->
+
+<!-- <div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div> -->
 
 </body>
 </html>
