--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -27,7 +27,7 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="#/"><i class="fa fa-home"></i>Home</a> </li>
-					<li> <a href="#/login"><i class="fa fa-user"></i> Sign In </a> </li>
+					<!-- <li> <a href="#/login"><i class="fa fa-user"></i> Sign In </a> </li> -->
 					<li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" > {{category.name}} </a></li>
 					<!-- <li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" ng-click="setActiveCategory( category )"> {{category.name}} </a></li> --> 
 				</ul>
