--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -62,6 +62,8 @@
  <script src="assets/scripts/controllers/hompageCtrl.js"> </script>
  <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
  <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
+ <script src="assets/scripts/controllers/loginCtrl.js"> </script>
+ <script src="assets/scripts/controllers/signupCtrl.js"> </script>
 
  <!-- <script>
   window.fbAsyncInit = function() {
