--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -27,10 +27,10 @@
 			<div id="navbar" class="navbar-collapse collapse" ng-controller="navCtrl">
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="#/"><i class="fa fa-home"></i>Home</a> </li>
-					<li> <a href="#/login" ng-hide="activeUser"> Login </a> </li>
-					<li> <a href="#/signup" ng-hide="activeUser"> Register </a> </li>
-					<li> <a href="#/logout" ng-click="logout()" ng-show="activeUser"> Logout </a> </li>
-					<li> <a href="#/profile" ng-show="activeUser" > My Profile </a> </li>
+					<li> <a href="#/login" ng-hide="activeUser"> <span class="fa fa-lock"></span> Login </a> </li>
+					<li> <a href="#/signup" ng-hide="activeUser"> <span class="fa fa-user-plus"></span>Register </a> </li>
+					<li> <a href="#/logout" ng-click="logout()" ng-show="activeUser"> <span class="fa fa-sign-out"></span>Logout </a> </li>
+					<li> <a href="#/profile" ng-show="activeUser" > <span class="fa fa-user-plus"> My Profile </a> </li>
 					<li ng-repeat="category in categories"><a href="#/products/{{ category._id }}" > {{category.name}} </a></li>
 				</ul>
 			</div>
@@ -64,6 +64,8 @@
  <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
  <script src="assets/scripts/controllers/loginCtrl.js"> </script>
  <script src="assets/scripts/controllers/signupCtrl.js"> </script>
+ <script src="assets/scripts/controllers/profileCtrl.js"> </script>
+
 
  <!-- <script>
   window.fbAsyncInit = function() {
