--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -65,6 +65,7 @@
  <script src="assets/scripts/controllers/loginCtrl.js"> </script>
  <script src="assets/scripts/controllers/signupCtrl.js"> </script>
  <script src="assets/scripts/controllers/profileCtrl.js"> </script>
+ <script src="assets/scripts/controllers/socialConnectCtrl.js"> </script>
 
 
  <!-- <script>
