--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -53,6 +53,7 @@
  <script src="assets/scripts/directives/productListView.js"> </script>
  <script src="assets/scripts/directives/loading.js"> </script>
  <script src="assets/scripts/directives/appspecific.js"> </script>
+ <script src="assets/scripts/directives/starRating.js"> </script>
  <script src="assets/scripts/services/products.js"> </script>
  <script src="assets/scripts/services/categories.js"> </script>
  <script src="assets/scripts/filters/filters.js"> </script>
@@ -65,6 +66,8 @@
  <script src="assets/scripts/controllers/profileCtrl.js"> </script>
  <script src="assets/scripts/controllers/socialConnectCtrl.js"> </script>
  <script src="assets/scripts/controllers/productFullmodeCtrl.js"> </script>
+ <script src="assets/scripts/controllers/ratingController.js"> </script>
+  
 
  <!-- <script>
   window.fbAsyncInit = function() {
