--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="sampleCartApp">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Frontend Homepage </title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
