--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -75,6 +75,7 @@
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
  <script src="../bower_components/angular-animate/angular-animate.min.js"> </script>
  <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"> </script>
+ <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"> </script>
  <script src="../bower_components/jquery/dist/jquery.min.js"> </script>
  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"> </script>
  <script src="../bower_components/slick-carousel/slick/slick.min.js"> </script>
