--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="sampleCartAdmin">
 <head>
 	<meta charset="UTF-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Admin/Backend </title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
@@ -33,6 +33,8 @@
  <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
  <script src="../bower_components/angular-animate/angular-animate.min.js"> </script>
+ <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"> </script>
+ <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"> </script>
  <script src="../bower_components/angular-aria/angular-aria.min.js"> </script>
  <script src="../bower_components/angular-material/angular-material.min.js"> </script>
  <script src="../bower_components/jquery/dist/jquery.min.js"> </script>
