--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -22,6 +22,7 @@
 				<li><a href="#/"><i class="fa fa-home"></i> Dashboard </a></li>
 				<li><a href="#/categories"> Manage Categories </a></li>
 				<li><a href="#/products"> Manage Products </a></li>
+				<li><a href="#/attributes"> Manage Attributes </a> </li>
 			</ul>
 		</div>
 		</nav>
@@ -45,12 +46,15 @@
  <script src="assets/scripts/app.js"> </script>
  <script src="assets/scripts/directives/product.js"> </script>
  <script src="assets/scripts/directives/category.js"> </script>
+ <script src="assets/scripts/directives/attribute.js"> </script>
  <script src="assets/scripts/directives/loading.js"> </script>
  <script src="assets/scripts/services/common.js"> </script>
  <script src="assets/scripts/services/products.js"> </script>
  <script src="assets/scripts/services/categories.js"> </script>
+ <script src="assets/scripts/services/attributes.js"> </script>
  <script src="assets/scripts/controllers/products.js"> </script>
  <script src="assets/scripts/controllers/categories.js"> </script>
+ <script src="assets/scripts/controllers/attributesCtrl.js"> </script>
  <script src="assets/scripts/filters/filters.js"> </script>
  <script src="assets/scripts/jQuery.script.js"> </script>
  
