--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -23,6 +23,7 @@
 				<li><a href="#/categories"> Manage Categories </a></li>
 				<li><a href="#/products"> Manage Products </a></li>
 				<li><a href="#/attributes"> Manage Attributes </a> </li>
+				<li><a href="#/attribute-set"> Manage Attribute Set </a> </li>
 			</ul>
 		</div>
 		</nav>
