--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -12,41 +12,45 @@
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 	
 </head>
-<body ng-cloak>
-	<!-- HEADER AND NAVBAR -->
-	<div id="" class="top-menu" ng-show="!fullmode" ng-controller="navCtrl">
-				
-		<nav class="navbar navbar-default" >
-			<div class="container">
-				<div class="navbar-header">
-				  <button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				  </button>
-				  <a class="navbar-brand" href="#/" ng-click="hideNav()"><i class="fa fa-shield"></i> MEAN is awesome!</a>
-				</div>
+<body>
+	<div class="wrapper">
+		<div class="top-menu" ng-show="!fullmode" ng-controller="navCtrl">
+			<nav class="navbar navbar-default" >
+				<div class="container">
+					<div class="navbar-header">
+					  <button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					  </button>
+					  <a class="navbar-brand" href="#/" ng-click="hideNav()"><i class="fa fa-shield"></i> MEAN is awesome!</a>
+					</div>
 
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" uib-collapse="navbarCollapsed">
-				  <ul class="nav navbar-nav navbar-right">
-						<li> <a href="#/" ng-click="hideNav()"><span class="fa fa-home"></span> Home</a> </li>
-						<li> <a href="#/login" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-lock"></span> Sign In </a> </li>
-						<li> <a href="#/signup" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"></span> Sign Up </a> </li>
-						<li> <a href="#/logout" ng-click="hideNav();logout()" ng-show="activeUser"> <span class="fa fa-sign-out"></span> Logout </a> </li>
-						<li> <a href="#/profile" ng-show="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"> My Profile </a> </li>
-						<li ng-repeat="category in categories" ><a href="#/products/{{ category._id }}" ng-click="hideNav()"> {{category.name}} </a></li>
-					</ul>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" uib-collapse="navbarCollapsed">
+					  <ul class="nav navbar-nav navbar-right">
+							<li> <a href="#/" ng-click="hideNav()"><span class="fa fa-home"></span> Home</a> </li>
+							<li> <a href="#/login" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-lock"></span> Sign In </a> </li>
+							<li> <a href="#/signup" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"></span> Sign Up </a> </li>
+							<li> <a href="#/logout" ng-click="hideNav();logout()" ng-show="activeUser"> <span class="fa fa-sign-out"></span> Logout </a> </li>
+							<li> <a href="#/profile" ng-show="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"> My Profile </a> </li>
+							<li ng-repeat="category in categories" ><a href="#/products/{{ category._id }}" ng-click="hideNav()"> {{category.name}} </a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
-	</div>
-		
-     
-		<div class="view-container">
-		  <div ng-view class="view-frame"></div>
+			</nav>
 		</div>
+		<div class="view-container">
+			<div ng-view class="view-frame"></div>
+		</div>
+		<footer class="footer" ng-show="!fullmode">
+			<div class="container">
+				<p class="text-muted text-center"> @copyright UMCH Corp Inc 2016 </p>
+			</div>
+		</footer>
+	</div>
+	
  <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
  <script src="../bower_components/angular-animate/angular-animate.min.js"> </script>
