--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -23,7 +23,7 @@
 				<li><a href="#/categories"> Manage Categories </a></li>
 				<li><a href="#/products"> Manage Products </a></li>
 				<li><a href="#/attributes"> Manage Attributes </a> </li>
-				<li><a href="#/attribute-set"> Manage Attribute Set </a> </li>
+				<li><a href="#/attribute-sets"> Manage Attribute Set </a> </li>
 			</ul>
 		</div>
 		</nav>
@@ -56,6 +56,7 @@
  <script src="assets/scripts/controllers/products.js"> </script>
  <script src="assets/scripts/controllers/categories.js"> </script>
  <script src="assets/scripts/controllers/attributesCtrl.js"> </script>
+ <script src="assets/scripts/controllers/attributeSetsCtrl.js"> </script>
  <script src="assets/scripts/filters/filters.js"> </script>
  <script src="assets/scripts/jQuery.script.js"> </script>
  
