--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -10,27 +10,30 @@
 	<link rel="stylesheet" href="assets/stylesheets/styles.css">
 </head>
 <body ng-controller="adminCtrl" ng-cloak>
-	<!-- HEADER AND NAVBAR -->
-	<header>
-		<nav class="navbar navbar-default">
-		<div class="container">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="/"> <i class="fa fa-shield"></i> MEAN is awesome!</a>
-			</div>
+	<div class="wrapper">
+		<!-- HEADER AND NAVBAR -->
+		<header>
+			<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/"> <i class="fa fa-shield"></i> MEAN is awesome!</a>
+				</div>
 
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#/"><i class="fa fa-home"></i> Dashboard </a></li>
-				<li><a href="#/categories"> Manage Categories </a></li>
-				<li><a href="#/products"> Manage Products </a></li>
-				<li><a href="#/attributes"> Manage Attributes </a> </li>
-				<li><a href="#/attribute-sets"> Manage Attribute Set </a> </li>
-			</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#/"><i class="fa fa-home"></i> Dashboard </a></li>
+					<li><a href="#/categories"> Manage Categories </a></li>
+					<li><a href="#/products"> Manage Products </a></li>
+					<li><a href="#/attributes"> Manage Attributes </a> </li>
+					<li><a href="#/attribute-sets"> Manage Attribute Set </a> </li>
+				</ul>
+			</div>
+			</nav>
+		</header>
+		<div id="main">
+			<div ng-view> </div>
 		</div>
-		</nav>
-	</header>
-	<div id="main">
- 		<div ng-view> </div>
- 	</div>
+	</div>
+	
 
  <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
