--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -56,6 +56,7 @@
  <script src="assets/scripts/services/products.js"> </script>
  <script src="assets/scripts/services/categories.js"> </script>
  <script src="assets/scripts/services/attributes.js"> </script>
+ <script src="assets/scripts/services/attributeSets.js"> </script>
  <script src="assets/scripts/controllers/products.js"> </script>
  <script src="assets/scripts/controllers/categories.js"> </script>
  <script src="assets/scripts/controllers/attributesCtrl.js"> </script>
