--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -51,6 +51,7 @@
  <script src="assets/scripts/directives/product.js"> </script>
  <script src="assets/scripts/directives/category.js"> </script>
  <script src="assets/scripts/directives/attribute.js"> </script>
+ <script src="assets/scripts/directives/attributeSet.js"> </script>
  <script src="assets/scripts/directives/loading.js"> </script>
  <script src="assets/scripts/services/common.js"> </script>
  <script src="assets/scripts/services/products.js"> </script>
