--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css" >
 	<link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick.css">
 	<link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
+	<link rel="stylesheet" href="assets/stylesheets/star-rating.css">	
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 	
 </head>
