--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en" ng-app="sampleCartApp">
 <head>
 	<meta charset="UTF-8">
+	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="Z686TVbvd51-En3-YD9BOhFwcTr0ytN-EDDM03bh9hs" />
-	<title> Mean stack changes </title>
+	<meta name="fragment" content="!">
+	<title> An E-commerce Web App using MEAN Stack </title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css" >
