--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- <base href="/"> -->
+	<title> An E-commerce Web App using MEAN Stack </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="Z686TVbvd51-En3-YD9BOhFwcTr0ytN-EDDM03bh9hs" />
 	<meta name="description" content="An E-commerce Web App using MEAN Stack. Open source technologies by adapty solutions pvt ltd.">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript, ecommerce, mean, meanstack, angular, angularjs, mongoDB, mongo, nodejs, node, express, expressjs, HTML5, CSS3, js, JS, JSON, AJAX, json, ajax, bootstrap, twitter bootstrap">
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript, ecommerce, mean, meanstack, angular, angularjs, mongoDB, mongo, nodejs, node, express, expressjs, HTML5, CSS3, js, JS, JSON, AJAX, json, ajax, bootstrap, twitter bootstrap, mean stack ecommerce heroku,mean stack ecommerce, mean stack, moltion, flipkart, snapdeal, amazon, flipkart ecommerce, flipkart e-commerce, e-commerce, ecommerce-websites">
 	<meta name="author" content="Umesh Chaurasiya / umesh.chaurasiya@adapty.com">
 
 	<meta name="fragment" content="!">
 
-	<title> An E-commerce Web App using MEAN Stack </title>
+	
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css" >
