--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="Z686TVbvd51-En3-YD9BOhFwcTr0ytN-EDDM03bh9hs" />
 	<meta name="description" content="An E-commerce Web App using MEAN Stack. Open source technologies by adapty solutions pvt ltd.">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript, ecommerce, mean, meanstack, angular, angularjs, mongoDB, mongo, nodejs, node, express, expressjs, HTML5, CSS3, js, JS, JSON, AJAX, json, ajax, bootstrap, twitter bootstrap, mean stack ecommerce heroku,mean stack ecommerce, mean stack, moltion, flipkart, snapdeal, amazon, flipkart ecommerce, flipkart e-commerce, e-commerce, ecommerce-websites">
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript, ecommerce, mean, meanstack, angular, angularjs, mongoDB, mongo, nodejs, node, express, expressjs, HTML5, CSS3, js, JS, JSON, AJAX, json, ajax, bootstrap, twitter bootstrap, mean stack ecommerce heroku,mean stack ecommerce, mean stack, moltion, flipkart, snapdeal, amazon, flipkart ecommerce, flipkart e-commerce, e-commerce, ecommerce-websites, mean stack ecommerce heroku opensource, mean stack ecommerce heroku framework, social media, media, advertisement, advertising, practical ecommerce">
 	<meta name="author" content="Umesh Chaurasiya / umesh.chaurasiya@adapty.com">
 
 	<meta name="fragment" content="!">
