--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -21,8 +21,8 @@
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 
 </head>
-<body ng-app="sampleCartApp">
-	<div class="wrapper">
+<body ng-app="sampleCartApp" zoom-container>
+	<div class="wrapper" >
 		<div class="top-menu" ng-show="!fullmode" ng-controller="navCtrl">
 			<nav class="navbar navbar-default">
 			  <div class="container">
@@ -59,7 +59,7 @@
 		</footer>
 	</div>
 	
-  <script src="../bower_components/angular/angular.min.js"> </script>
+ <script src="../bower_components/angular/angular.min.js"> </script>
  <script src="../bower_components/angular-route/angular-route.min.js"> </script>
  <script src="../bower_components/angular-animate/angular-animate.min.js"> </script>
  <script src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"> </script>
@@ -67,6 +67,7 @@
  <script src="../bower_components/angular-aria/angular-aria.min.js"> </script>
  <script src="../bower_components/angular-material/angular-material.min.js"> </script>
  <script src="../bower_components/jquery/dist/jquery.min.js"> </script>
+ <script src="../bower_components/elevatezoom/jquery.elevatezoom.js"></script>
  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"> </script>
  <script src="../bower_components/slick-carousel/slick/slick.min.js"> </script>
 
