--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -40,10 +40,11 @@
 					<li ng-repeat="category in categories" ><a href="#!/products/{{ category._id }}" ng-click="hideNav(); setActiveCategory(category)"> {{category.name}} </a></li>
 				  </ul>
 				  <ul class="nav navbar-nav navbar-right">
-					<li> <a href="#!/login" ng-hide="activeUser" ng-click="hideNav()"> <span class="glyphicon glyphicon-log-in"></span> Login </a> </li>
-					<li> <a href="#!/signup" ng-hide="activeUser" ng-click="hideNav()"> <span class="glyphicon glyphicon-user"></span> Sign Up </a> </li>
+					<li> <a href="#!/login" ng-hide="activeUser" ng-click="hideNav()"> <i class="fa fa-sign-in" aria-hidden="true"></i> Login </a> </li>
+					<li> <a href="#!/signup" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"></span>  Sign Up </a> </li>
 					<li> <a href="#!/logout" ng-click="hideNav();logout()" ng-show="activeUser"> <span class="fa fa-sign-out"></span> Logout </a> </li>
-					<li> <a href="#!/profile" ng-show="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"> My Profile </a> </li>
+					<li> <a href="#!/profile" ng-show="activeUser" ng-click="hideNav()"> <span class="glyphicon glyphicon-user"></span> My Profile </a> </li>
+					<li> <a href="#!/cart" ng-click="hideNav()"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> </a> </li>
 				  </ul>
 				</div>
 			  </div>
@@ -85,6 +86,8 @@
  <script src="assets/scripts/controllers/productListingCtrl.js"> </script>
  <script src="assets/scripts/controllers/productDetailsCtrl.js"> </script>
  <script src="assets/scripts/controllers/productFullmodeCtrl.js"> </script>
+ <script src="assets/scripts/controllers/cartCtrl.js"> </script>
+ <script src="assets/scripts/controllers/checkoutCtrl.js"> </script>
  <script src="assets/scripts/app.js"> </script>
  
 </body>
