--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -44,7 +44,7 @@
 					<li> <a href="#!/signup" ng-hide="activeUser" ng-click="hideNav()"> <span class="fa fa-user-plus"></span>  Sign Up </a> </li>
 					<li> <a href="#!/logout" ng-click="hideNav();logout()" ng-show="activeUser"> <span class="fa fa-sign-out"></span> Logout </a> </li>
 					<li> <a href="#!/profile" ng-show="activeUser" ng-click="hideNav()"> <span class="glyphicon glyphicon-user"></span> My Profile </a> </li>
-					<li> <a href="#!/cart" ng-click="hideNav()"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> </a> </li>
+					<li> <a href="#!/cart" ng-click="hideNav()"> <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Your Cart </a> </li>
 				  </ul>
 				</div>
 			  </div>
